# lab3_sem2

./: ArraySequence.h  CMakeLists.txt  CString.h  Common.h  Deque.h  DynamicArray.h  FunctionHolder.h  Functions.h  LinkedList.h  LinkedListSequence.h  Person.h  Queue.h  SegmentedDeque.h  Sequence.h  Stack.h  main.cpp  menu.h  tests.cpp
